--- a/src/pages/wallet-details/wallet-details.scss
+++ b/src/pages/wallet-details/wallet-details.scss
@@ -2,10 +2,6 @@ page-coinbase-account,
 page-wallet-details {
   $icon-width: 36px;
 
-  .search-icon {
-    font-size: 2.5rem;
-  }
-
   .balance-card {
     overflow: hidden;
     background-color: white;
