--- a/src/pages/wallets/wallets.scss
+++ b/src/pages/wallets/wallets.scss
@@ -13,31 +13,13 @@ page-integrations {
     }
   }
 
-  .toolbar-background {
-    background: none;
-  }
-
-  .bp-header {
-    .settings-button {
-      .notifications-badge {
-        border-radius: 9px;
-        font-size: 15px;
-        padding: 3px 7px;
-        padding-top: 4px;
-        font-weight: 600;
-        margin-right: 5px;
-      }
-
-      button.add {
-        margin-top: -4px;
-        img {
-          margin-left: 7px;
-          padding-bottom: 5px;
-          width: 28px;
-          opacity: 0.6;
-        }
-      }
-    }
+  .notifications-badge {
+    border-radius: 9px;
+    font-size: 15px;
+    padding: 3px 7px;
+    padding-top: 4px;
+    font-weight: 600;
+    margin-right: 5px;
   }
 
   .toolbar-title-ios {
